--- a/BiancardiGame/bin/.gitignore
+++ b/BiancardiGame/bin/.gitignore
@@ -1,10 +1,2 @@
-/Battle.class
-/Biancardi.class
-/Contestant.class
-/GameBoard.class
-/Question.class
-/Sean.class
-/Self.class
-/Todd.class
-/Winner.class
-/BianpartyDatingSim.class
+/GameFrame$1.class
+/GameFrame.class
