--- a/BiancardiGame/bin/.gitignore
+++ b/BiancardiGame/bin/.gitignore
@@ -1,2 +1,11 @@
+/Battle.class
+/Biancardi.class
+/BianpartyDatingSim.class
+/Contestant.class
 /GameFrame$1.class
 /GameFrame.class
+/Question.class
+/Sean.class
+/Self.class
+/Todd.class
+/Winner.class
