--- a/BiancardiGame/bin/.gitignore
+++ b/BiancardiGame/bin/.gitignore
@@ -10,3 +10,8 @@
 /Todd.class
 /Winner.class
 /GameFrame$2.class
+/Bianparty.class
+/Bianparty$1$1.class
+/Bianparty$1.class
+/Bianparty$2$1.class
+/Bianparty$2.class
